# VirtualDesktopAccessor

./: .gitignore  Cargo.toml  README.md  note-reverse-engineer-com-interfaces.md  virtual-desktop.ahk
.github/workflows/: docs.yml  release.yml
dll/: Cargo.toml  cbindgen.toml
dll/src/: lib.rs
print-com-interfaces/: Cargo.toml
print-com-interfaces/src/: main.rs
src/: comobjects.rs  desktop.rs  events.rs  interfaces.rs  interfaces_multi.rs  lib.rs  listener.rs  tests.rs
src/interfaces/: build_10240.rs  build_22000.rs  build_dyn.rs
src/interfaces_multi/: build_10240.rs  build_16299.rs  build_17134.rs  build_17663.rs  build_19044_4355.rs  build_19045.rs  build_20348.rs  build_22000.rs  build_22621_2215.rs  build_22621_3155.rs  build_22631_2428.rs  build_22631_3155.rs  build_26100.rs  build_dyn.rs
testbin/: Cargo.toml
testbin/src/: main.rs
